# device-gateway

./: .dockerignore  .env.example  .gitignore  .readthedocs.yaml  CITATION.cff  Dockerfile  Dockerfile.dev  Dockerfile.qubex.dev  LICENSE  Makefile  README.md  compose.yaml  mkdocs.yaml  pyproject.toml  requirements.txt  test_client.py
.github/: copilot-instructions.md  git-pr-release.erb
.github/ISSUE_TEMPLATE/: BUG_REPORT.yaml  DOCUMENTATION.yaml  FEATURE_REQUEST.yaml  QUESTION.yaml  TASK.yaml
config/: _device_topology.json  config.yaml  config.yaml.qubex  config.yaml.qulacs  config.yaml.ybex  device_topology.json  device_topology_request.json  device_topology_sim.json
config/example/: config.yaml  device_topology.json  device_topology_request.json  device_topology_sim.json
docs/: index.md
docs/developer_guidelines/: getting_started.md  index.md  setup.md
docs/example/: dummy_backend.ipynb  qubex_backend.ipynb  qulacs_backend.ipynb
memories/: dummy.txt
proto/: Makefile  buf.gen.yaml
scripts/: change_status_to_active.sh  change_status_to_inactive.sh  change_status_to_maintenance.sh  device_topology_generator.sh  generate_config.sh  init.sh  qubex_config_downloader.sh
src/device_gateway/: service.py
src/device_gateway/backend/: base_backend.py  plugin_manager.py  qubex_backend.py  qulacs_backend.py
src/device_gateway/circuit/: plugin_manager.py  qubex_circuit.py  qulacs_circuit.py
src/device_gateway/core/: base_backend.py  base_circuit.py  gate_set.py  plugin_manager.py
src/device_gateway/plugins/qubex/: backend.py  circuit.py
src/device_gateway/plugins/qubex/backend/: qubex_backend.py
src/device_gateway/plugins/qulacs/: backend.py  circuit.py
src/device_gateway/plugins/ybex/: backend.py  circuit.py  compiler.py
src/device_gateway/qpu_interface/v1/: qpu_pb2.py  qpu_pb2_grpc.py
src/device_gateway/tool/: device_info_generator.py
src/tool/: generate_device_topology.py
tests/device_gateway/: test_service.py
tests/device_gateway/plugins/qulacs/: test_backend.py
tests/device_gateway/plugins/ybex/: external_program_invalid_result.py  external_program_mock.py  external_program_raise.py  test_backend.py
