[project]
name = "device-gateway"
version = "1.0.0"
description = "Device Gateway"
license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.70.0",
    "protobuf>=6.30.1",
    "rustworkx>=0.16.0",
    "qiskit~=1.3.2",
    "qulacs>=0.6.11",
    "networkx>=3.4.2",
    "matplotlib>=3.8.0",
    "qiskit-qasm3-import>=0.5.1",
    "pyyaml>=6.0.2",
    "grpcio-reflection>=1.62.3",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.8",
    "mkdocs-macros-plugin>=1.3.7",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-static-i18n>=1.3.0",
    "pymdown-extensions>=10.14.3",
    "mkdocs-exclude>=1.0.2",
    "jupyter>=1.1.1",
    "python-json-logger>=2.0.7",
]
qubex = [
    "qubex[backend]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/device_gateway"]

[tool.mypy]
ignore_missing_imports = true


[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=xml"
pythonpath = ["src","src/device_gateway","src/device_gateway/qpu_interface","src/device_gateway/qpu_interface","src/device_gateway/qpu_interface/v2"]

[tool.uv.sources]
qubex = { git = "https://github.com/amachino/qubex.git", tag = "v1.3.3" }
